# p0ly-utils

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEFERRED_CI_AUTOMATION.md
src/p0ly_utils/: __init__.py  epoching.py  io.py  merge.py  preprocessing.py  report.css  reporting.py
src/p0ly_utils/_legacy/: epoching.py
src/p0ly_utils/metadata/: __init__.py  _legacy.py  core.py  dmss.py  dotprobe.py  igt.py  intwm.py  mgsearch.py  parser.py  simonfb.py  transforms.py
src/p0ly_utils/metadata/specs/: dmss.yaml  dotprobe.yaml  igt.yaml  intwm.yaml  mgsearch.yaml  simonfb.yaml
tests/: test_epoching.py  test_extractors.py  test_golden.py  test_io.py  test_merge.py  test_metadata_migration.py  test_parser.py  test_preprocessing.py
tests/data/: ch_names.json  dmss_ann.csv  dotprobe_ann.csv  intwm_ann.csv  intwm_ptb.csv  mgsearch_ann.csv  simonfb_ann.csv
tests/data/expected/: dmss.csv  dotprobe.csv  intwm.csv  intwm_ptb.csv  mgsearch.csv  simonfb.csv
