[project]
name = "p0ly-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Frederik Baumgardt", email = "fbaumgardt@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "mne>=1.12.1",
    "mne-icalabel>=0.9.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
